--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "react-starter-setup",
+  "name": "geovana-silva-portfolio",
   "version": "1.0.0",
-  "description": "This is a starter boilerplate react app that I created just for studying purpose.",
+  "description": "This is a project constructed to be my portfolio.",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack --mode=development",
+    "dev": "webpack --mode=development",
     "build": "webpack --mode=production",
-    "dev": "webpack-dev-server"
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/geovanasilva/react-starter-setup.git"
+    "url": "git+https://github.com/geovanasilva/geovanasilva.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/geovanasilva/react-starter-setup/issues"
+    "url": "https://github.com/geovanasilva/geovanasilva/issues"
   },
-  "homepage": "https://github.com/geovanasilva/react-starter-setup#readme",
+  "homepage": "/geovanasilva/",
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
@@ -28,6 +28,7 @@
     "node-sass": "^4.14.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.0",
+    "svg-url-loader": "^6.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
