chore: change at .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ jspm_packages/
 
 # Dependency
 package-lock.json
+yarn.lock
 
 # TypeScript v1 declaration files
 typings/
@@ -105,3 +106,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Vs Code config
+.vscode
