--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "This is a project constructed to be my portfolio.",
   "main": "webpack.config.js",
   "scripts": {
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d dist",
+    "deploy" : "npm run build && gh-pages -d public",
     "dev": "webpack --mode=development",
     "build": "webpack --mode=production",
     "start": "webpack-dev-server"
@@ -27,7 +26,6 @@
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
-    "gh-pages": "^2.2.0",
     "node-sass": "^4.14.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.0",
@@ -37,6 +35,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
